Fix a whitespace issue on the bottom of the page.

--- a/css/main.css
+++ b/css/main.css
@@ -15,6 +15,7 @@ body,
 .main-container {
     height: 100%;
     margin: 0;
+    padding: 0;
 }
 
 body {
